--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html>
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Esta es la manera de importar un archivo de CSS a la pagina de HTML // la diagonal para cerrar no es necesaria en HTML5 -->
 </head>
 <body>
-    
+    <h1 class="color">Propiedad color</h1>
+    <h1 id="titulo">Titulo</h1>
+    <p class="texto">texto parrafo chanchito feliz</p>
+    <p class="texto especial">otro texto, otro parrafo, otro chanchito feliz</p>
+    <p class="especial">otro texto, otro parrafo, otro chanchito feliz</p>
+
+    <div>
+        <p>Hola chanchito feliz</p>
+       <h2>Soy un subtitulo</h2> 
+       <h3>Soy un sub subtitulo</h3>
+    </div>
 </body>
 </html>
