--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <!-- Esta es la manera de importar un archivo de CSS a la pagina de HTML // la diagonal para cerrar no es necesaria en HTML5 -->
 </head>
 <body>
+
+    <article id="fondo">Soy la propiedad de Background</article>
+
     <h1 class="color">Propiedad color</h1>
     <h1 id="titulo">Titulo</h1>
     <p class="texto">texto parrafo chanchito feliz</p>
