Termine 1.15 def de links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Esta es la manera de importar un archivo de CSS a la pagina de HTML // la diagonal para cerrar no es necesaria en HTML5 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
+
+    <a href="https://www.google.co.nz">Chanchito Feliz</a>
+
+    <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, saepe aliquid! Odio cupiditate dolorem voluptatum reprehenderit est, quod repellat distinctio similique corrupti quas soluta sed neque adipisci dolorum quos delectus? Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+
+    <div class="margen">
+        chancito de margen
+    </div>
 
     <article id="fondo">Soy la propiedad de Background</article>
 
