--- a/index.html
+++ b/index.html
@@ -10,6 +10,41 @@
 
 </head>
 <body>
+    
+    <!-- <article id="position">Soy prop de posición</article> -->
+
+    <div class="inline">la la</div>
+    <div class="inline">le le</div>
+    <span>span 1</span>
+    <span>span 2</span>
+
+    <article id="position">Soy prop de posición</article>
+
+    <Table>
+        <tr>
+            <th>Nombre</th>
+            <th>Apellido</th>
+        </tr>
+        <tr>
+            <td>Nicolas</td>
+            <td>Schurmann</td>
+        </tr>
+        <tr>
+            <td>Chanchito</td>
+            <td>Feliz</td>
+        </tr>
+        <tr>
+            <td>Felipe</td>
+            <td>Triste</td>
+        </tr>
+    </Table>
+
+
+    <ul>
+        <li>Uno asdfghj sdfghjkl sdfghj </li>
+        <li>Dos asdfghjki asdfghj sdfghj Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt illum rem quis? Rem corporis explicabo quos beatae quod voluptatem praesentium iusto animi ad, dolor veniam? Architecto deserunt veniam rem corporis.</li>
+        <li>Tres sdfgh sdfgbhj asdfghjki</li>
+    </ul>
 
     <a href="https://www.google.co.nz">Chanchito Feliz</a>
 
