--- a/index.html
+++ b/index.html
@@ -10,11 +10,31 @@
 
 </head>
 <body>
+
+    <section class="center">
+        <p>Hola Mundo</p>
+    </section>
+
+    <div class="inline-block">inline block</div>
+    <div class="inline-block">inline block 2</div>
+   
+    <div class="container">
+        <article class="column right">1</article>
+        <article class="column right">2</article>
+        <article class="column right">3</article>
+    </div>
+
+    <div class="container">
+        <!-- <div class="left">izquierda</div>
+        <div class="right">derecha</div> -->
+        <!-- Esto es una mala practica, solo se usa para que se entienda -->
+        <img src="cuaderno.jpg" class="left">
+        <p>Soy un parrafo a la derecha</p>
+    </div>
     
     <!-- <article id="position">Soy prop de posición</article> -->
 
-    <div class="inline">la la</div>
-    <div class="inline">le le</div>
+
     <span>span 1</span>
     <span>span 2</span>
 
